--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -73,6 +73,7 @@ $primaryColor: #dd4b39;
   height: 1.5em;
 }
 .ticketsButton {
+  composes: root from "./button.module.scss";
   composes: link;
   line-height: 1.3;
 }
